--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   formz: ^0.6.1
   go_router: ^6.2.0
   google_fonts: ^4.0.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -25,7 +26,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - .env  
+    - .env
     - assets/loaders/
     - assets/images/
     - google_fonts/montserrat_alternates/
